fixed ids, spacings, added scroll

--- a/src/modules/dashboard/components/ExpenditurePage/Payments/Payments.css
+++ b/src/modules/dashboard/components/ExpenditurePage/Payments/Payments.css
@@ -9,7 +9,7 @@
 }
 
 .payments {
-  margin-bottom: 8px;
+  margin-bottom: 18px;
   font-size: var(--size-smallish);
   font-weight: var(--weight-bold);
   line-height: 18px;
@@ -18,10 +18,9 @@
 
 .recipientLabel {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  min-height: 28px;
-  min-height: 40px;
+  align-items: center;
+  padding-bottom: 10px;
   font-size: var(--size-smallish);
   font-weight: var(--weight-bold);
   line-height: 18px;
@@ -29,6 +28,7 @@
 }
 
 .singleRecipient {
+  margin-bottom: 40px;
   position: relative;
 }
 
@@ -48,7 +48,7 @@
 }
 
 .verticalDivider {
-  height: calc(100% - 80px);
+  height: calc(100% - 84px);
   position: absolute;
   top: 56px;
 
